.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Flosum_Task__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__BranchId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Flosum__Branch__c</referenceTo>
        <relationshipName>Flosum_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Job_Type__c</fullName>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SYNC</fullName>
                </value>
                <value>
                    <fullName>BUILD</fullName>
                </value>
                <value>
                    <fullName>REVIEW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Lock__c</fullName>
        <label>Lock</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flosum__Parameters__c</fullName>
        <label>Parameters</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__PatchId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>Flosum__Patch__c</referenceTo>
        <relationshipName>Flosum_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__Priority__c</fullName>
        <label>Priority</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flosum__RepositoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repository</label>
        <referenceTo>Flosum__Repository__c</referenceTo>
        <relationshipName>Flosum_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QUEUED</fullName>
                </value>
                <value>
                    <fullName>IN PROGRESS</fullName>
                </value>
                <value>
                    <fullName>COMPLETED</fullName>
                </value>
                <value>
                    <fullName>CANCELED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__SyncId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sync Job</label>
        <referenceTo>Flosum__Sync_Job__c</referenceTo>
        <relationshipName>Flosum_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flosum__jobId__c</fullName>
        <label>jobId</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>